# Comunidade_Tubarao

./: main.py  pyproject.toml
comunidadetubarao/: __init__.py  forms.py  models.py  routes.py
comunidadetubarao/templates/: base.html  contato.html  editarperfil.html  home.html  navbar.html
