[project]
name = "tubarao-comunidade"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pillow>=11.2.1",
    "wtforms>=3.2.1",
]
